Now at the time of customer registration the password will be encrypted before storing to the database, similarly authenticaton will be done at the time of login